--- a/mvc/src/views/imoveis/search-result.ejs
+++ b/mvc/src/views/imoveis/search-result.ejs
@@ -8,40 +8,30 @@
 <body>
   <h2>Resultados</h2>
   <% if (imoveis.length> 0) { %>
-    <div>
-      <table>
-        <thead>
-          <td>Rua</td>
-          <td>Cidade</td>
-          <td>Estado</td>
-          <td>Número</td>
-          <td>Tipo</td>
-        </thead>
+  <div>
+    <table>
+      <thead>
+        <td>Rua</td>
+        <td>Cidade</td>
+        <td>Estado</td>
+        <td>Número</td>
+        <td>Tipo</td>
+      </thead>
+      <tbody>
         <% imoveis.forEach(function (imovel) { %>
-          <tbody>
-            <tr>
-              <td>
-                <%= imovel.rua %>
-              </td>
-              <td>
-                <%= imovel.cidade %>
-              </td>
-              <td>
-                <%= imovel.estado %>
-              </td>
-              <td>
-                <%= imovel.numero %>
-              </td>
-              <td>
-                <%= imovel.tipo %>
-              </td>
-            </tr>
-            <% }) %>
-          </tbody>
-      </table>
-    </div>
-    <% } %>
-    <a href="/">Voltar</a>
+        <tr>
+          <td><%= imovel.rua %></td>
+          <td><%= imovel.cidade %></td>
+          <td><%= imovel.estado %></td>
+          <td><%= imovel.numero %></td>
+          <td><%= imovel.tipo %></td>
+        </tr>
+        <% }) %>
+      </tbody>
+    </table>
+  </div>
+  <% } %>
+  <a href="/">Voltar</a>
 </body>
 
 </html>
