--- a/mvc/src/views/imoveis/search-result.ejs
+++ b/mvc/src/views/imoveis/search-result.ejs
@@ -11,11 +11,13 @@
   <div>
     <table>
       <thead>
-        <td>Rua</td>
-        <td>Cidade</td>
-        <td>Estado</td>
-        <td>Número</td>
-        <td>Tipo</td>
+        <tr>
+          <th>Rua</th>
+          <th>Cidade</th>
+          <th>Estado</th>
+          <th>Número</th>
+          <th>Tipo</th>
+        </tr>
       </thead>
       <tbody>
         <% imoveis.forEach(function (imovel) { %>
