--- a/mvc/src/views/imoveis/index.ejs
+++ b/mvc/src/views/imoveis/index.ejs
@@ -14,6 +14,13 @@
       <button type="submit">Pesquisar</button>
     </form>
   </div>
+  <div>
+    <h2>Pesquisar Imóveis utilizando POST</h2>
+    <form method="post" action="/imoveis/search">
+      <input type="text" name="tipo" placeholder="Tipo de imóvel" />
+      <button type="submit">Pesquisar</button>
+    </form>
+  </div>
   <% if (imoveis.length > 0) { %>
   <div>
     <h2>Últimos Imóveis</h2>
