--- a/mvc/src/views/imoveis/index.ejs
+++ b/mvc/src/views/imoveis/index.ejs
@@ -7,49 +7,51 @@
 </head>
 
 <body>
-  <div>
-    <h2>Pesquisar Imóveis</h2>
-    <form method="get" action="/imoveis/search">
-      <input type="text" name="tipo" placeholder="Tipo de imóvel" />
-      <button type="submit">Pesquisar</button>
-    </form>
-  </div>
-  <div>
-    <h2>Pesquisar Imóveis utilizando POST</h2>
-    <form method="post" action="/imoveis/search">
-      <input type="text" name="tipo" placeholder="Tipo de imóvel" />
-      <button type="submit">Pesquisar</button>
-    </form>
-  </div>
-  <% if (imoveis.length > 0) { %>
-  <div>
-    <h2>Últimos Imóveis</h2>
+  <div class="main">
     <div>
-      <table>
-        <thead>
-          <tr>
-            <th>Rua</th>
-            <th>Cidade</th>
-            <th>Estado</th>
-            <th>Número</th>
-            <th>Tipo</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% imoveis.forEach(function (imovel) { %>
-          <tr>
-            <td><%= imovel.rua %></td>
-            <td><%= imovel.cidade %></td>
-            <td><%= imovel.estado %></td>
-            <td><%= imovel.numero %></td>
-            <td><%= imovel.tipo %></td>
-          </tr>
-          <% }) %>
-        </tbody>
-      </table>
+      <h2>Pesquisar Imóveis</h2>
+      <form method="get" action="/imoveis/search">
+        <input type="text" name="tipo" placeholder="Tipo de imóvel" />
+        <button type="submit">Pesquisar</button>
+      </form>
     </div>
+    <div>
+      <h2>Pesquisar Imóveis utilizando POST</h2>
+      <form method="post" action="/imoveis/search">
+        <input type="text" name="tipo" placeholder="Tipo de imóvel" />
+        <button type="submit">Pesquisar</button>
+      </form>
+    </div>
+    <% if (imoveis.length > 0) { %>
+    <div>
+      <h2>Últimos Imóveis</h2>
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>Rua</th>
+              <th>Cidade</th>
+              <th>Estado</th>
+              <th>Número</th>
+              <th>Tipo</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% imoveis.forEach(function (imovel) { %>
+            <tr>
+              <td><%= imovel.rua %></td>
+              <td><%= imovel.cidade %></td>
+              <td><%= imovel.estado %></td>
+              <td><%= imovel.numero %></td>
+              <td><%= imovel.tipo %></td>
+            </tr>
+            <% }) %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    <% } %>
   </div>
-  <% } %>
 </body>
 
 </html>
