--- a/mvc/public/css/style.css
+++ b/mvc/public/css/style.css
@@ -3,12 +3,36 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+  background-color: #f2f2f2;
+}
+
+div.main {
+  padding: 20px;
+  border-radius: 10px;
+  background-color: #fff;
+  max-width: 1200px;
+  margin: 20px auto;
+}
+
 input {
   padding: 5px;
 }
 
 button {
   padding: 5px;
+}
+
+div:has(a) {
+  margin: 10px 0;
+}
+
+a:visited, a:hover, a:active {
+  color: #0000ff;
+}
+
+table {
+  width: 100%;
 }
 
 thead tr {
@@ -19,7 +43,11 @@ tr:nth-child(even) {
   background-color: #f2f2f2;
 }
 
+tbody tr:hover {
+  background-color: #ddd;
+}
+
 th, td {
-  font-family: monospace;
+  font-family: monospace, 'Courier New', Courier;
   padding: 5px;
 }
