--- a/mvc/public/css/style.css
+++ b/mvc/public/css/style.css
@@ -27,7 +27,15 @@ div:has(a) {
   margin: 10px 0;
 }
 
-a:visited, a:hover, a:active {
+a:link, a:visited {
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline;
+}
+
+a {
   color: #5c5cff;
 }
 
